add techologies block

--- a/blocks/button-call/button-call.scss
+++ b/blocks/button-call/button-call.scss
@@ -5,5 +5,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 11px;
+    padding: 5px;
 }
+
+@media screen and (min-width: 390px) {
+    .button-call {
+        padding: 11px;
+    }
+  }
+  
