--- a/blocks/styles/variables.scss
+++ b/blocks/styles/variables.scss
@@ -3,4 +3,5 @@ $color_blue: #009BFF;
 $color_blue-light: #009bff26;
 $color_white: #ffffff;
 $color_gray: #BFC9E0;
+$color_gray-description: #F3F5FB;
 $color_background: #F0F3F9;
