--- a/blocks/button-get-offer/button-get-offer.scss
+++ b/blocks/button-get-offer/button-get-offer.scss
@@ -11,3 +11,9 @@
     border: none;
     font: 700 14px "Gilroy Bold", "Arial", "sans-serif";
 }
+
+@media screen and (min-width: 390px) {
+    .button-get-offer {
+        padding: 18px 97px;
+    }
+  }
