--- a/blocks/styles/styles.css
+++ b/blocks/styles/styles.css
@@ -6,12 +6,18 @@
 
 .generalInfo__title {
   font: 700 30px "Gilroy Bold", "Arial", "sans-serif";
+  margin: 25px 0 15px 0;
   color: #2B2E3E;
 }
 
 .generalInfo__subtitle {
   font: 500 16px "Gilroy Medium", "Arial", "sans-serif";
+  margin: 0;
   color: #2B2E3E;
+}
+
+.generalInfo__button {
+  margin: 30px 0 10px 0;
 }
 
 .generalInfo__title span {
@@ -28,9 +34,14 @@
   width: 100%;
   border-radius: 5px;
   border: 1px dashed #BFC9E0;
-  font: 400 14px "Gilroy Medium", "Arial", "sans-serif";
+  font: 400 12px "Gilroy Medium", "Arial", "sans-serif";
 }
 
+@media screen and (min-width: 390px) {
+  .generalInfo__wrapper-recall-time {
+    font: 400 14px "Gilroy Medium", "Arial", "sans-serif";
+  }
+}
 .button-call {
   background-color: rgba(0, 155, 255, 0.1490196078);
   border: none;
@@ -38,9 +49,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 11px;
+  padding: 5px;
 }
 
+@media screen and (min-width: 390px) {
+  .button-call {
+    padding: 11px;
+  }
+}
 .button-get-offer {
   box-sizing: border-box;
   display: flex;
@@ -55,6 +71,11 @@
   font: 700 14px "Gilroy Bold", "Arial", "sans-serif";
 }
 
+@media screen and (min-width: 390px) {
+  .button-get-offer {
+    padding: 18px 97px;
+  }
+}
 .header {
   box-sizing: border-box;
   background-color: #ffffff;
@@ -80,6 +101,63 @@
 @media screen and (min-width: 390px) {
   .header__container {
     gap: 15px;
+  }
+}
+.technologies {
+  padding: 50px 10px;
+  background-color: #ffffff;
+  border-radius: 15px;
+  margin: 80px 0 10px 0;
+}
+
+.technologies__title {
+  font: 700 30px "Gilroy Bold", "Arial", "sans-serif";
+  color: #2B2E3E;
+  text-align: center;
+  margin: 0;
+}
+
+.technologies__img {
+  display: block;
+  margin: 0 auto;
+}
+
+.technologies__img:not(:last-child) {
+  margin: 0 auto 45px auto;
+}
+
+.technologies__description {
+  box-sizing: border-box;
+  width: 197px;
+  border-radius: 10px;
+  position: absolute;
+  font: 600 14px "Gilroy Regulat", "Arial", "sans-serif";
+  color: #2B2E3E;
+  background-color: #F3F5FB;
+  top: 65px;
+  left: 15%;
+  padding: 15px 20px;
+}
+
+.technologies__wrapper-img {
+  position: relative;
+}
+
+.technologies__subtitle {
+  font: 500 16px "Gilroy Medium", "Arial", "sans-serif";
+  color: #2B2E3E;
+  text-align: center;
+  margin: 15px 0 40px 0;
+}
+
+.technologies__title span {
+  color: #009BFF;
+}
+
+@media screen and (min-width: 390px) {
+  .technologies__description {
+    padding: 20px 25px;
+    left: 25%;
   }
 }
 .body {
