--- a/blocks/styles/variables.scss
+++ b/blocks/styles/variables.scss
@@ -1,7 +1,10 @@
+
 $color_black: #2B2E3E;
 $color_blue: #009BFF;
 $color_blue-light: #009bff26;
 $color_white: #ffffff;
+$color_white-transparency-title: rgba(255, 255, 255, 0.80);
+$color_white-transparency-circle: rgba(255, 255, 255, 0.15);
 $color_gray: #BFC9E0;
 $color_gray-description: #F3F5FB;
 $color_background: #F0F3F9;
