update name variables

--- a/blocks/button-call/button-call.scss
+++ b/blocks/button-call/button-call.scss
@@ -1,5 +1,5 @@
 .button-call {
-    background-color: $color_blue-light;
+    background-color: $color_button_transparency;
     border: none;
     border-radius: 5px;
     display: flex;
