--- a/blocks/button-get-offer/button-get-offer.scss
+++ b/blocks/button-get-offer/button-get-offer.scss
@@ -5,8 +5,8 @@
     align-items: center;
     width: 100%;
     border-radius: 5px;
-    background-color: $color_blue;
-    color: $color_white;
+    background-color: $color_button_default;
+    color: $color_text_1;
     padding: 18px 70px;
     border: none;
     font: 700 14px "Gilroy Bold", "Arial", "sans-serif";
