--- a/blocks/generalInfo/generalInfo.scss
+++ b/blocks/generalInfo/generalInfo.scss
@@ -1,12 +1,12 @@
 .generalInfo__title {
     font: 700 30px "Gilroy Bold", "Arial", "sans-serif";
     margin: 25px 0 15px 0;
-    color: $color_black;
+    color: $color_text_default;
 }
 .generalInfo__subtitle {
     font: 500 16px "Gilroy Medium", "Arial", "sans-serif";
     margin: 0;
-    color: $color_black;
+    color: $color_text_default;
 }
 
 .generalInfo__button {
@@ -14,7 +14,7 @@
 }
 
 .generalInfo__title span {
-    color: $color_blue;
+    color: $color_text_2;
 }
 
 .generalInfo__wrapper-recall-time {
@@ -26,7 +26,7 @@
     padding: 18px 10px;
     width: 100%;
     border-radius: 5px;
-    border: 1px dashed $color_gray;
+    border: 1px dashed $color_border;
     font: 400 12px "Gilroy Medium", "Arial", "sans-serif";
 }
 
