--- a/blocks/header/header.scss
+++ b/blocks/header/header.scss
@@ -2,7 +2,7 @@
 
 .header {
     box-sizing: border-box;
-   background-color: $color_white;
+   background-color: $color_text_1;
    width: 100%;
    padding: 5px 15px;
    border-radius: 10px;
