--- a/blocks/styles/variables.scss
+++ b/blocks/styles/variables.scss
@@ -1,10 +1,14 @@
-
-$color_black: #2B2E3E;
-$color_blue: #009BFF;
-$color_blue-light: #009bff26;
-$color_white: #ffffff;
-$color_white-transparency-title: rgba(255, 255, 255, 0.80);
-$color_white-transparency-circle: rgba(255, 255, 255, 0.15);
-$color_gray: #BFC9E0;
-$color_gray-description: #F3F5FB;
+$color_text_default: #2B2E3E;
+$color_text_1: #ffffff;
+$color_text_1_transparency:  rgba(255, 255, 255, 0.80);
+$color_text_2: #009BFF;
+$color_text_3: rgba(255, 255, 255, 0.80);
+$color_button_default: #009BFF;
+$color_background_engine: #009BFF;
+$color_button_transparency: #D9F0FF;
+$color_border: #BFC9E0;
+$color_circle: rgba(255, 255, 255, 0.15);
+$color_background_description: #F3F5FB;
 $color_background: #F0F3F9;
+
+
