--- a/blocks/technologies/technologies.scss
+++ b/blocks/technologies/technologies.scss
@@ -1,13 +1,13 @@
 .technologies {
     padding: 50px 10px;
-    background-color: $color_white;
+    background-color: $color_text_1;
     border-radius: 15px;
     margin: 80px 0 10px 0;
 }
 
 .technologies__title {
     font: 700 30px "Gilroy Bold", "Arial", "sans-serif";
-    color: $color_black;
+    color: $color_text_default;
     text-align: center;
     margin: 0;
 }
@@ -26,9 +26,9 @@
     width: 197px;
     border-radius: 10px;
     position: absolute;
-    font: 600 14px "Gilroy Regulat", "Arial", "sans-serif";
-    color: $color_black;
-    background-color: $color_gray-description;
+    font: 500 14px "Gilroy Semibold", "Arial", "sans-serif";
+    color: $color_text_default;
+    background-color: $color_background_description;
     top: 65px;
     left: 15%;
     padding: 15px 20px;
@@ -40,13 +40,13 @@
 
 .technologies__subtitle {
     font: 500 16px "Gilroy Medium", "Arial", "sans-serif";
-    color: $color_black;
+    color: $color_text_default;
     text-align: center;
     margin: 15px 0 40px 0;
 
 }
 .technologies__title span {
-    color: $color_blue;
+    color: $color_text_2;
 }
 
 @media screen and (min-width: 390px) {
