--- a/blocks/styles/variables.scss
+++ b/blocks/styles/variables.scss
@@ -4,6 +4,7 @@ $color_text_1_transparency:  rgba(255, 255, 255, 0.80);
 $color_text_2: #009BFF;
 $color_text_3: rgba(255, 255, 255, 0.80);
 $color_button_default: #009BFF;
+$color_button_hover: rgba(0, 155, 255, 0.2);
 $color_background_engine: #009BFF;
 $color_button_transparency: #D9F0FF;
 $color_border: #BFC9E0;
