--- a/fonts/styles/fonts.css
+++ b/fonts/styles/fonts.css
@@ -12,7 +12,7 @@
 }
 @font-face {
   font-family: "Gilroy Semibold";
-  src: local("Gilroy Semibold"), url("./Gilroy/ttf/Gilroy-Semibold.ttf") format("ttf"), url("./Gilroy/woff/Gilroy-Semibold.woff") format("woff"), url("./Gilroy/eot/Gilroy-Semibold.eot") format("eot");
+  src: local("Gilroy Semibold"), url("../Gilroy/ttf/Gilroy-Semibold.ttf") format("ttf"), url("../Gilroy/woff/Gilroy-Semibold.woff") format("woff"), url("../Gilroy/eot/Gilroy-Semibold.eot") format("eot");
 }
 
 /*# sourceMappingURL=fonts.css.map */
