--- a/fonts/styles/fonts.scss
+++ b/fonts/styles/fonts.scss
@@ -26,7 +26,7 @@
 @font-face {
   font-family: "Gilroy Semibold";
   src: local("Gilroy Semibold"),
-    url("./Gilroy/ttf/Gilroy-Semibold.ttf") format("ttf"),
-    url("./Gilroy/woff/Gilroy-Semibold.woff") format("woff"),
-    url("./Gilroy/eot/Gilroy-Semibold.eot") format("eot");
+    url("../Gilroy/ttf/Gilroy-Semibold.ttf") format("ttf"),
+    url("../Gilroy/woff/Gilroy-Semibold.woff") format("woff"),
+    url("../Gilroy/eot/Gilroy-Semibold.eot") format("eot");
 }
