--- a/blocks/button-call/button-call.scss
+++ b/blocks/button-call/button-call.scss
@@ -1,16 +1,42 @@
 .button-call {
-    background-color: $color_button_transparency;
-    border: none;
-    border-radius: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 5px;
+  background-color: $color_button_transparency;
+  border: none;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  cursor: pointer;
+}
+
+.button-call__text {
+  display: none;
 }
 
 @media screen and (min-width: 390px) {
-    .button-call {
-        padding: 11px;
-    }
+  .button-call {
+    padding: 11px;
   }
-  
+}
+
+@media screen and (min-width: 768px) {
+  .button-call__img {
+    display: none;
+    padding: 13px 40px;
+  }
+
+  .button-call__text {
+    font: 700 14px "Gilroy Bold", "Arial", "sans-serif";
+    display: inline;
+  }
+
+  .button-call {
+    color: $color_text_1;
+    background-color: $color_button_default;
+  }
+
+  .button-call:hover {
+    background-color: $color_button_hover;
+    color: $color_text_2;
+  }
+}
