--- a/blocks/button-get-offer/button-get-offer.scss
+++ b/blocks/button-get-offer/button-get-offer.scss
@@ -17,3 +17,16 @@
         padding: 18px 97px;
     }
   }
+
+  @media screen and (min-width: 768px) {
+    .button-get-offer {
+        max-width: 258px;
+        padding: 15px 25px;
+    }
+  }
+
+    @media screen and (min-width: 1920px) {
+    .button-get-offer {
+        padding: 15px 40px;
+    }
+  }
