--- a/blocks/generalInfo/generalInfo.scss
+++ b/blocks/generalInfo/generalInfo.scss
@@ -1,38 +1,100 @@
 .generalInfo__title {
-    font: 700 30px "Gilroy Bold", "Arial", "sans-serif";
-    margin: 25px 0 15px 0;
-    color: $color_text_default;
+  font: 700 30px "Gilroy Bold", "Arial", "sans-serif";
+  margin: 25px 0 15px 0;
+  color: $color_text_default;
 }
 .generalInfo__subtitle {
-    font: 500 16px "Gilroy Medium", "Arial", "sans-serif";
-    margin: 0;
-    color: $color_text_default;
+  font: 500 16px "Gilroy Medium", "Arial", "sans-serif";
+  margin: 0;
+  color: $color_text_default;
 }
 
 .generalInfo__button {
-    margin: 30px 0 10px 0;
+  margin: 30px 0 10px 0;
 }
 
-.generalInfo__title span {
-    color: $color_text_2;
+.generalInfo__title_color {
+  color: $color_text_2;
 }
 
 .generalInfo__wrapper-recall-time {
-    box-sizing: border-box;
-    display: flex;
-    justify-content: center;
-    align-items:center;
-    gap: 5px;
-    padding: 18px 10px;
-    width: 100%;
-    border-radius: 5px;
-    border: 1px dashed $color_border;
-    font: 400 12px "Gilroy Medium", "Arial", "sans-serif";
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  padding: 18px 10px;
+  width: 100%;
+  border-radius: 5px;
+  border: 1px dashed $color_border;
+  font: 400 12px "Gilroy Medium", "Arial", "sans-serif";
+}
+
+.generalInfo__img-small {
+  width: 99%;
+}
+
+.generalInfo__img-large {
+  display: none;
 }
 
 @media screen and (min-width: 390px) {
-    
-.generalInfo__wrapper-recall-time {
+  .generalInfo__wrapper-recall-time {
     font: 400 14px "Gilroy Medium", "Arial", "sans-serif";
-}
   }
+}
+
+@media screen and (min-width: 768px) {
+  .generalInfo__img-small {
+    display: none;
+  }
+
+  .generalInfo__wrapper-btn {
+    display: flex;
+  }
+
+  .generalInfo__img-large {
+    display: block;
+    width: 568px;
+  }
+
+  .generalInfo {
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: row-reverse;
+  }
+
+  .generalInfo__wrapper-imgs {
+    position: relative;
+  }
+
+  .generalInfo__img-large {
+    position: absolute;
+    top: 0;
+    left: -200px;
+  }
+
+  .generalInfo__title {
+    font-size: 42px;
+  }
+
+  .generalInfo__subtitle {
+    font-size: 20px;
+  }
+  .generalInfo__wrapper-text {
+    max-width: 785px;
+    width: 54%;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .generalInfo__img-large {
+    width: 670px;
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  .generalInfo__img-large {
+    width: 770px;
+  }
+}
