improve adaptive for generalInfo block

--- a/blocks/button-get-offer/button-get-offer.scss
+++ b/blocks/button-get-offer/button-get-offer.scss
@@ -21,7 +21,8 @@
   @media screen and (min-width: 768px) {
     .button-get-offer {
         max-width: 258px;
-        padding: 15px 25px;
+        padding: 15px;
+        margin: 0 15px 0 0;
     }
   }
 
