--- a/blocks/styles/variables.scss
+++ b/blocks/styles/variables.scss
@@ -9,6 +9,7 @@ $color_background_engine: #009BFF;
 $color_button_transparency: #D9F0FF;
 $color_border: #BFC9E0;
 $color_circle: rgba(255, 255, 255, 0.15);
+$color_triangle: #009BFF;
 $color_background_description: #F3F5FB;
 $color_background: #F0F3F9;
 
