--- a/blocks/button-call/button-call.scss
+++ b/blocks/button-call/button-call.scss
@@ -40,3 +40,10 @@
     color: $color_text_2;
   }
 }
+
+@media screen and (min-width: 1024px) {
+  .button-call {
+    padding: 13px 40px;
+  }
+
+}
