--- a/blocks/styles/styles.css
+++ b/blocks/styles/styles.css
@@ -157,6 +157,7 @@
     font-size: 42px;
     line-height: 45px;
     letter-spacing: -1.36px;
+    margin: 0;
   }
   .generalInfo__subtitle {
     font-size: 20px;
