--- a/blocks/styles/styles.css
+++ b/blocks/styles/styles.css
@@ -5,12 +5,42 @@
 }
 
 .engine {
+  position: relative;
   border-radius: 15px;
   background-color: #009BFF;
   padding: 50px 19px 92px 19px;
+  overflow: hidden;
+}
+
+.engine__line {
+  position: absolute;
+  display: block;
+  content: "_";
+  width: 1730px;
+  height: 15px;
+  opacity: 0.72;
+  background: linear-gradient(92deg, #0090ED -0.07%, #009BFF 9.17%);
+  filter: blur(9.5px);
+  z-index: 1;
+}
+
+.engine__line_first {
+  transform: translateX(-890px) rotate(78deg);
+}
+
+.engine__line_second {
+  left: 34%;
+  transform: translateX(-890px) rotate(78deg);
+}
+
+.engine__line_third {
+  left: 73%;
+  transform: translateX(-890px) rotate(78deg);
 }
 
 .engine__title {
+  position: relative;
+  z-index: 2;
   color: #ffffff;
   font: 700 30px "Gilroy Bold", "Arial", "sans-serif";
   letter-spacing: -0.6px;
@@ -26,6 +56,9 @@
 .engine__list {
   margin: 0;
   padding: 0 0 0 20px;
+  max-width: 622px;
+  position: relative;
+  z-index: 2;
 }
 
 .engine__list-item {
@@ -78,8 +111,80 @@
   }
 }
 @media screen and (min-width: 768px) {
+  .engine {
+    padding: 50px 67px;
+  }
   .engine__title {
     line-height: 47px;
+    text-align: left;
+    margin: 0 0 20px 0;
+    font-size: 34px;
+  }
+  .engine__list-item:last-child {
+    margin: 0;
+  }
+  .engine__wrapper-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  }
+  .engine__line_first {
+    left: 0;
+  }
+  .engine__line_second {
+    left: 15%;
+  }
+  .engine__line_third {
+    left: 30%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .engine__line_second {
+    left: 11%;
+  }
+  .engine__line_third {
+    left: 23%;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .engine__line_first {
+    left: 10%;
+  }
+  .engine__line_second {
+    left: 17%;
+  }
+  .engine__line_third {
+    left: 26%;
+  }
+  .engine__wrapper-content {
+    gap: 70px;
+  }
+  .engine {
+    padding: 150px 200px;
+  }
+}
+@media screen and (min-width: 1920px) {
+  .engine__line_first {
+    left: 12%;
+  }
+  .engine__line_second {
+    left: 22%;
+  }
+  .engine__line_third {
+    left: 40%;
+  }
+  .engine__wrapper-content {
+    gap: 194px;
+  }
+  .engine__title {
+    margin: 0 0 40px 0;
+  }
+  .engine {
+    padding: 200px 247px;
+  }
+  .engine__title {
+    font-size: 68px;
   }
 }
 .generalInfo__title {
