--- a/blocks/styles/styles.css
+++ b/blocks/styles/styles.css
@@ -17,9 +17,9 @@
   display: block;
   content: "_";
   width: 1730px;
-  height: 15px;
+  height: 40px;
   opacity: 0.72;
-  background: linear-gradient(92deg, #0090ED -0.07%, #009BFF 9.17%);
+  background: linear-gradient(92deg, #0196f6, #0096f7);
   filter: blur(9.5px);
   z-index: 1;
 }
