--- a/blocks/engine/engine.scss
+++ b/blocks/engine/engine.scss
@@ -1,11 +1,15 @@
 .engine {
   position: relative;
-  border-radius: 15px;
-  background-color: $color_background_engine;
-  padding: 50px 19px 92px 19px;
+  
   overflow: hidden;
+  width: 100%;
 }
 
+.engine__content {
+    border-radius: 15px;
+  background-color: $color_background_engine;
+ padding: 50px 19px 92px 19px;
+}
 
 .engine__line {
   position: absolute;
@@ -110,7 +114,7 @@
 }
 
 @media screen and (min-width: 768px) {
-  .engine {
+  .engine__content {
     padding: 50px 67px;
   }
 
@@ -167,7 +171,7 @@
     gap: 70px;
   }
 
-  .engine {
+  .engine__content {
     padding: 150px 200px;
   }
 }
