--- a/blocks/generalInfo/__img/generalInfo__img.scss
+++ b/blocks/generalInfo/__img/generalInfo__img.scss
@@ -5,7 +5,7 @@
 @media screen and (min-width: 768px) {
   .generalInfo__img {
     display: block;
-    width: 450px;
+    width: 350px;
     position: absolute;
     right: 0;
   }
@@ -13,7 +13,8 @@
 
 @media screen and (min-width: 1024px) {
   .generalInfo__img {
-    width: 570px;
+    width: 450px;
+    top: 25px;
   }
 }
 
