--- a/blocks/header/header.scss
+++ b/blocks/header/header.scss
@@ -1,6 +1,6 @@
 .header {
    width: 100%;
-   margin: 0 0 35px 0;
+//    margin: 0 0 35px 0;
 }
 
 .header__content {
@@ -11,6 +11,9 @@
    border-radius: 10px;
    display: flex;
    justify-content: space-between;
+      position: relative;
+   z-index: 2;
+
 }
 
 .header__phone-number {
