--- a/blocks/styles/styles.scss
+++ b/blocks/styles/styles.scss
@@ -9,5 +9,16 @@
 @import "../technologies/technologies.scss";
 
 .body {
-    background-color: $color_background;
+  background-color: $color_background;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
