--- a/blocks/technologies/technologies.scss
+++ b/blocks/technologies/technologies.scss
@@ -1,8 +1,17 @@
 .technologies {
   padding: 50px 10px;
+  margin: 0 0 10px 0;
+}
+
+.technologies__content {
+  box-sizing: border-box;
+  padding: 50px 10px;
   background-color: $color_text_1;
   border-radius: 15px;
-  margin: 80px 0 10px 0;
+  margin: 0 0 10px 0;
+  position: relative;
+  z-index: 3;
+  width: 100%;
 }
 
 .technologies__title {
